--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="description" content="Sistema de gestão de conteúdo para aplicativos Tilary">
     <meta property="og:title" content="Tilary - Gestão de Conteúdo">
     <meta property="og:description" content="Sistema de gestão de conteúdo para aplicativos Tilary">
-    <meta property="og:image" content="/logo_tilary-software_S4TQdk.png">
+    <meta property="og:image" content="https://formulariotilary.vercel.app/logo_tilary-software_S4TQdk.png">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://formulariotilary.vercel.app/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tilary - Gestão de Conteúdo">
     <meta name="twitter:description" content="Sistema de gestão de conteúdo para aplicativos Tilary">
-    <meta name="twitter:image" content="/logo_tilary-software_S4TQdk.png">
+    <meta name="twitter:image" content="https://formulariotilary.vercel.app/logo_tilary-software_S4TQdk.png">
 </head>
   <body>
     <div id="root"></div>
